# hydra-github-app

./: .gitignore  Cargo.toml  README.md  flake.nix  nixosModule.nix  package.nix
.github/workflows/: flake-check.yml
src/: main.rs
