[package]
name = "hydra-github-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["std", "now", "serde"] }
env_logger = { version = "0.11.8", default-features = false }
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
reqwest = { version = "0.13.1", features = ["cookies", "gzip", "json", "query"] }
rsa = { version = "0.9.9", features = ["sha2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3.16.1"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["time"] }
warp = { version = "0.4.2", features = ["server", "test"] }

